# 7-Zip-zstd-wine

./: .gitignore  CMakeLists.txt  build.sh
CPP/7zip/UI/Common/: Extract.h  WineUtils.cpp  WineUtils.h
CPP/7zip/UI/FileManager/: App.cpp  BrowseDialog.cpp  BrowseDialog2.cpp  FSFolder.cpp  Panel.h  PanelFolderChange.cpp
cmake/: toolchain-mingw-w64.cmake
mingw-passthru/: HtmlHelp.h  MAPI.h  OleCtl.h  shlobj_core.h
